Принципы Kiss, Dry и Yagni[#241643]